tests/errors/semantic/test_semantic_13_invalid_arithmetic_operands.f90
program test_semantic_13_invalid_arithmetic_operands
  implicit none
  logical :: l
  integer :: a
  l = .true.
  a = l + 1
end program test_semantic_13_invalid_arithmetic_operands
